@@ -1,3 +1,7 @@
+Tue Aug  1 19:42:30 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Pop objects to top of layer on drag
+
 Mon Jul 31 16:47:36 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* It works! Renders to the gtk window and everything :)
